# psyche

./: .clang-format  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  package.json  pnpm-lock.yaml
apps/api/: drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/api/drizzle/: 0000_youthful_mandroid.sql  0001_warm_bastion.sql  0002_spooky_gideon.sql  0003_split_tool_definitions.sql  0004_old_clea.sql  0005_grey_salo.sql  0006_simplify_conversation_items.sql  0007_rapid_crusher_hogan.sql  0008_seed_openai_provider.sql  0009_model_call_failures.sql
apps/api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  _journal.json
apps/api/src/: credentialCrypto.ts  env.ts  index.ts  providerOAuth.ts  providerStore.ts  server.ts
apps/api/src/agents/: AgentHarness.test.ts  AgentHarness.ts  index.ts  selectModelClient.test.ts  selectModelClient.ts  types.ts
apps/api/src/conversations/: ConversationManager.test.ts  ConversationManager.ts
apps/api/src/db/: client.ts  schema.ts
apps/api/src/modelClients/: ChatCompletionsClient.ts  ResponsesClient.ts  clientUtils.test.ts  clientUtils.ts  conversationStore.test.ts  conversationStore.ts  credentials.test.ts  credentials.ts  index.ts  modelClients.test.ts  requestMapping.ts  types.ts
apps/api/src/routes/: agent.test.ts  agent.ts  conversation.test.ts  conversation.ts  health.ts  providerAccess.ts
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: main.tsx
apps/web/src/app/: AppShell.module.css  AppShell.tsx  nav.ts
apps/web/src/components/: HomePage.module.css  HomePage.tsx
apps/web/src/components/theme/: ThemeToggle.module.css  ThemeToggle.tsx
apps/web/src/components/ui/: Button.module.css  Button.tsx  Panel.module.css  Panel.tsx  index.ts
apps/web/src/features/home/: HomePage.module.css  HomePage.tsx
apps/web/src/features/home/components/: ApiStatusPanel.module.css  ApiStatusPanel.tsx
apps/web/src/features/settings/: SettingsPage.module.css  SettingsPage.tsx
apps/web/src/lib/: api.ts
apps/web/src/routes/: __root.tsx  index.tsx  settings.tsx
apps/web/src/styles/: global.css  themes.css  tokens.css
apps/web/src/theme/: ThemeProvider.tsx  index.ts  theme.ts
cmake/: cleanup.cmake  cleanup_exp.cmake  copy_resources.cmake  dependencies.cmake  plugins.cmake  targets.cmake
ext/recursive-variant/include/rva/: variant.hpp
include/psyche/: agent.h  bitwise.h  host_interface.h  json.h  plugin.h  plugin_registrar.h  resource.h
plugins/agents/basic_agent/: CMakeLists.txt  basic_agent.cc  basic_agent.h  info.json
plugins/agents/default_agent/: CMakeLists.txt  default_agent.cc  default_agent.h  info.json
plugins/agents/python_agent/: CMakeLists.txt  __init__.py  callback.py  info.json  invokable.py  python_agent.py
psyche_agent/: CMakeLists.txt  __init__.py  callback.py  db.py  info.json  invokable.py  psyche_agent.py  schema.sql
src/: asyncio_loop.cc  asyncio_loop.h  command_handler.cc  command_handler.h  cppplugin.cc  cppplugin.h  data_store.cc  data_store.h  executor.cc  executor.h  main.cc  message_processor.cc  message_processor.h  plugin_manager.cc  plugin_manager.h  pyplugin.cc  pyplugin.h  utils.cc  utils.h  websockets_server.cc  websockets_server.h
test/: pyplugin.py  test_python_agent.py
